Update title in index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <link rel="stylesheet" href="css/style.css" type="text/css">
-	<title>Mon Film Préféré</title>
+	<title>Deadpool & Wolverine</title>
 </head>
 
 <body>
